objects/Criterio_de_cota_regional__c.object
<CustomObject>
    <fields>
        <fullName>Bandeira__c</fullName>
        <formula>Cota_nacional__r.Bandeira__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bandeira</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandeira_regional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bandeira regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <formula>text(Cota_nacional__r.Canal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumo_de_cotas__c</fullName>
        <label>Consumo de cotas</label>
        <summarizedField>Cota_regional__c.Cota_utilizada__c</summarizedField>
        <summaryForeignKey>Cota_regional__c.Criterio_regional_de_cota__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cota__c</fullName>
        <label>Cota</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cota_nacional__c</fullName>
        <label>Cota nacional</label>
        <referenceTo>Cota_nacional__c</referenceTo>
        <relationshipLabel>Critérios regionais de cota</relationshipLabel>
        <relationshipName>Criterios_regionais_de_cota</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Executivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nome_do_SKU__c</fullName>
        <formula>Cota_nacional__r.Criterio_nacional_de_cota__r.SKU__r.Nome_do_produto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome do SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Vendas__c</fullName>
        <formula>Cota_nacional__r.Regional__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Vendas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <formula>Cota_nacional__r.Regional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Cota_nacional__r.SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_canal__c</fullName>
        <formula>text(Cota_nacional__r.Sub_canal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_de_cotas__c</fullName>
        <description>Indica o total de cotas dependentes que já foram criadas para este produto.</description>
        <inlineHelpText>Indica o total de cotas dependentes que já foram criadas para este produto.</inlineHelpText>
        <label>Cotas distribuídas</label>
        <summarizedField>Cota_regional__c.Cota__c</summarizedField>
        <summaryForeignKey>Cota_regional__c.Criterio_regional_de_cota__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Critério regional de cota</label>
    <nameField>
        <displayFormat>Critério Regional {0000}</displayFormat>
        <label>Número do Critério Regional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critérios regionais de cota</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valida_Bandeira_obrigatoria</fullName>
        <active>true</active>
        <errorConditionFormula>AND( not(Isblank( Cota_nacional__r.Bandeira__c  )),  Bandeira_regional__c )</errorConditionFormula>
        <errorDisplayField>Bandeira_regional__c</errorDisplayField>
        <errorMessage>Não é possível marcar o campo Bandeira Regional pois a bandeira já foi informada no critério nacional pai.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_total_de_cotas</fullName>
        <active>true</active>
        <errorConditionFormula>Total_de_cotas__c &gt;Cota__c</errorConditionFormula>
        <errorMessage>Você excedeu a quantidade de cotas disponíveis para o critério regional</errorMessage>
    </validationRules>
</CustomObject>